--- a/Consumo de API/music.html
+++ b/Consumo de API/music.html
@@ -27,7 +27,7 @@
         </div>
     </div>
   </form>
-  <div class="dato-container"></div>
+  <div class="dato-container" style="width:auto;margin-left: 500px;margin-right: auto;"></div>
 <script src="music.js"></script>
   </body>
 </html>
